--- a/src/images/components/Begin.css
+++ b/src/images/components/Begin.css
@@ -1,10 +1,16 @@
+body{
+    background-image: url("../images/back.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 div.container{
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     height: 90vh;
 }
 div.card{
+    padding: 100px;
     display: flex;
     flex-direction: column;
 }
@@ -12,6 +18,7 @@ div.card-title{
     font-family: 'Lato',sans-serif;
     font-size: 64px;
     text-align: center;
+    color: white;
 }
 hr{
     border-color: grey;
@@ -22,16 +29,15 @@ div.card-body{
     text-align: center;
     font-family: 'Lato',sans-serif;
     font-size: 24px;
-    border: 1px solid black;
+    border: 1px solid white;
     border-radius: 5px;
     animation-name: begin;
     animation-duration: 2s;
-}
-div.card-body:hover{
-    background-color: black;
     color: white;
 }
-
+div.card-body:hover{
+    background-image: linear-gradient(to top right,rgb(47,63,98),rgb(70,202,252));
+}
 @keyframes begin{
     from{opacity: 0;}
     to{opacity: 1;}
